Add image and style to occupational-therapy page

--- a/occupational-therapy.html
+++ b/occupational-therapy.html
@@ -40,8 +40,9 @@
         </ul>
     </header>
 
-    <section class="cv-outer">
-        <div class="cv">
+    <section class="therapy">
+        
+        <div class="therapy-inner">
             <h3>Occupational Therapy</h3>
             <p>
                 Occupational therapy is a specialized science in the field of health, which improves skills of
@@ -59,6 +60,7 @@
                 <li>The person's sensory skills where his ability to perceive his body (somatocognition) and how he
                     perceives the body's relationship with the environment (kinaesthesia) is assessed.</li>
             </ul>
+        
 
             <p>Visual and auditory perception (the individual's perception of visual and auditory stimuli) and
                 stereocognition (determining the size, texture and shape of an object).</p>
@@ -110,6 +112,9 @@
                 <li>Psychosocial retardation</li>
                 <li>Maladaptive behavior</li>
             </ul>
+        </div>
+        <div class="therapy-image">
+            <img src="assets/images/occup-image.jpg" alt="">
         </div>
     </section>
 
