--- a/special-education.html
+++ b/special-education.html
@@ -41,7 +41,7 @@
     </header>
 
     <section class="cv-outer">
-        <div class="cv">
+        <div class="therapy cv">
             <h3>Special Education</h3>
             <p>
                 Special Education and Education is the set of educational services provided to students with
@@ -59,7 +59,7 @@
                 <li>special instruments and means as well as special teaching techniques.</li>
             </ul>
 
-            <p>The role of the special educator is important and extremely helpful in improving the child's learning
+            <p><b>The role of the special educator</b> is important and extremely helpful in improving the child's learning
                 level. Some of the goals set in the context of special education concern the improvement of the
                 following skills:</p>
             <ul>
