Add image and style to speech-therapy page

--- a/speech-therapy.html
+++ b/speech-therapy.html
@@ -40,8 +40,8 @@
         </ul>
     </header>
 
-    <section class="cv-outer">
-        <div class="cv">
+    <section class="therapy">
+        <div class="therapy-inner">
             <h3>Speech Therapy</h3>
             <p>Speech therapy is the science that deals with speech, speaking voice and chewing-swallowing
                 disorders in children and adults, whatever the cause of these disorders: neurological, developmental
@@ -104,6 +104,9 @@
                     takes to master a skill, however the average means something and especially if it has been six
                     months
                     and the child is not making progress then there should be concern .</p>
+        </div>
+        <div class="therapy-image">
+            <img src="assets/images/occup-image.jpg" alt="">
         </div>
     </section>
 
