Add image and style to special-education page

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <p><a href="occupational-therapy.html">Read more</a></p>
             </div>
             <div class="services-image">
-                <img src="assets/images/image-center-1.jpg" width="400" height="600"
+                <img src="assets/images/image-center-1.jpg"
                     alt="girl-in-gray-dress-and-gray-tights-playing-on-white-rug-with-woman-in-white-sweater">
             </div>
         </div>
@@ -120,7 +120,7 @@
                 <p><a href="special-education.html">Read more</a></p>
             </div>
             <div class="services-image">
-                <img src="assets/images/image-center-2.jpg" width="400" height="600"
+                <img src="assets/images/image-center-2.jpg"
                     alt="mother-and-son-using-educational-toys">
             </div>
         </div>
