--- a/parental-counselling.html
+++ b/parental-counselling.html
@@ -40,8 +40,8 @@
         </ul>
     </header>
 
-    <section class="cv-outer">
-        <div class="cv">
+    <section class="therapy">
+        <div class="therapy-inner">
             <h3>Parental Counselling</h3>
                 <p>Parent counseling takes place between the parents and the psychologist/psychotherapist to whom they
                     turn. In the counseling sessions, the issues that concern the parents in relation to their child,
@@ -67,6 +67,9 @@
                     <p>Depending on the circumstances, parenting counseling may take place with one or both parents, and the
                         frequency of sessions may vary depending on the needs of the family and the therapist's assessment of
                         the treatment plan.</p>
+        </div>
+        <div class="therapy-image parental-image">
+            <img src="assets/images/occup-image.jpg" alt="">
         </div>
     </section>
 
