--- a/special-education.html
+++ b/special-education.html
@@ -40,8 +40,8 @@
         </ul>
     </header>
 
-    <section class="cv-outer">
-        <div class="therapy cv">
+    <section class="therapy">
+        <div class="therapy-inner">
             <h3>Special Education</h3>
             <p>
                 Special Education and Education is the set of educational services provided to students with
@@ -83,6 +83,9 @@
                 <li>The goals set are of gradable difficulty and constantly evolve during the program depending on the
                     child's goals.</li>
             </ul>
+        </div>
+        <div class="therapy-image">
+            <img src="assets/images/occup-image.jpg" alt="">
         </div>
     </section>
 
