Add heading and p elements to maria.html and update style

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <li>Self-service of the individual and his independence in activities of daily life such as feeding,
                         clothing-shoes safety, movement, personal hygiene.</li>
                     <li>The productivity of the individual where his ability in the field of work is assessed. For the
-                        child, "work" is the game and his learning development. </li>                 
+                        child, "work" is the game and his learning development. </li>
                 </ul>
                 <p><a href="occupational-therapy.html">Read more</a></p>
             </div>
@@ -120,8 +120,7 @@
                 <p><a href="special-education.html">Read more</a></p>
             </div>
             <div class="services-image">
-                <img src="assets/images/image-center-2.jpg"
-                    alt="mother-and-son-using-educational-toys">
+                <img src="assets/images/image-center-2.jpg" alt="mother-and-son-using-educational-toys">
             </div>
         </div>
     </section>
