Add heading and p elements to gelly.html and style. Restructured code to maria.html

--- a/gelly.html
+++ b/gelly.html
@@ -41,33 +41,55 @@
     </header>
 
     <section class="cv-outer">
-        <div class="cv">
-            <h3>Aggeliki Teligiannidou</h3>
-            <p>
-                Aggeliki Teligiannidou is a graduate of the speech therapy department of the School of Health and
-                Welfare Professions of the Technological Educational Institute of Epirus in Greece. As part of her
-                diploma thesis, she has conducted a pilot application of the TOPL 1 test in the Greek population. She
-                has been working in the private sector as a Speech Therapist since 2007. Since 2008 she has been running
-                the Speech and Language Therapy Center with Maria Tsimourdaga. She was an external scientific associate
-                in the cochlear implantation department of the university clinic of the Ahepa Hospital in Thessaloniki,
-                from 2008 to 2012. In 2014, the collaboration with the Occupational Therapy Center began, which led to
-                the creation of the Center for Special Therapies "Simeio". She is specialized in Lidcombe. methods,
-                Neurofunctional Reorganization, Intensive Interaction, Palin PCI, P.E.K.S.E. (Level 1). She is a
-                certified sponsor of the Phonetics and Phonological Evolution Test (P.S.L., 1995), the weighted language
-                assessment tool Logometer as well as the Developmental Profile Communication Model: Model of Cycles. She
-                participated in the workshop (25 hours) on: Problems that occur in the comprehension and production of
-                oral speech, in relation to the particular characteristics of the Greek language. Their evaluation,
-                diagnosis and treatment. (Levanti Irene, 2014). She has attended numerous seminars such as Stuttering in
-                childhood, Evaluation – Therapeuti Intervention of Voice Disorders, , Speech Therapy Massage, Vision and
-                Learning, Vision and Autism, Children's Tracing , Messy Play: Sensory play as a means of development
-                etc. Attends the Internationally Accredited Hanen Program for Early Childhood Professionals: Hanen
-                "Teacher Talk" (Center for Training and Lifelong Learning) of the National and
-                Kapodistrian University of Athens (NKUA) Finally, she has published in e-poster form at the 13th
-                International Conference on Cochlear Implants (Munich, Germany 18-21 June 2014) her research paper on
-                "Comparison of speech discrimination and comprehension of cochlear implant users: computer produced
-                speech versus live voice" She continues to be constantly updated and educated on new scientific methods
-                and developments related to the science of speech therapy.
-            </p>
+        <div class="cv-inner">
+            <div class="cv">
+                <div class="cv-info">
+                    <div class="cv-info-inner">
+                        <h3>Aggeliki Teligiannidou</h3>
+                        <h4>Speech Therapist</h4>
+                        <h4>Email : kentrologo@gmail.com</h4>
+                    </div>
+                </div>
+                <div class="cv-description">
+                    <p>
+                        Teligiannidou Angeliki is a graduate of the speech therapy department of the School of Health
+                        and Welfare Professions of the Technological Educational Institute of Epirus in Greece. As part
+                        of her diploma work, she has conducted a pilot application of the TOPL 1 test in the Greek
+                        population.
+                    </p>
+                    <p> She has been working in the private sector as a Speech Therapist since 2007 and since 2008 she
+                        is the co-owner of the Speech Therapy Center with Maria Tsimourdaga. At the same time, from 2008
+                        to 2012 she was an external scientific associate in the department of cochlear implants of the
+                        university clinic of Ahepa hospital in Thessaloniki.</p>
+                    <p>She is specialized in the methods of Lidcombe, Neurofunctional Reorganization, Intensive
+                        Interaction. She is a certified sponsor of the Test of Phonetic and Phonological Development
+                        (P.S.L., 1995), the weighted language assessment tool Logometer as well as the Cycles Model, a
+                        program that assesses the social interaction of individuals with autism spectrum disorders and
+                        highlights the relationship of communication and language development.
+                    </p>
+                    <p>She participated in the workshop on Problems that appear in the understanding and production of
+                        spoken
+                        language, in relation to the special characteristics of the Greek language. Their assessment,
+                        diagnosis
+                        and treatment.
+                    </p>
+                    <p>She has attended numerous seminars such as Stuttering in childhood, Evaluation - Therapeutic
+                        Intervention
+                        of Voice Disorders, Speech Therapy Massage, Vision and Learning, Vision and Autism, Children's
+                        Footprint, Messy Play: Sensory play as a means of development, etc.
+                    </p>
+                    <p>Finally, she has published in e-poster format at the 13th International Conference on Cochlear
+                        Implants
+                        (Munich, Germany June 18-21, 2014) her research paper on "Comparison of speech discrimination
+                        and
+                        comprehension of cochlear implant users: computer produced speech versus live voice"
+                    </p>
+                    <p>She continues to be informed and educated on new scientific methods and developments concerning
+                        the
+                        science of speech therapy.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
