--- a/elena.html
+++ b/elena.html
@@ -41,33 +41,41 @@
     </header>
 
     <section class="cv-outer">
-        <div class="cv">
-            <h3>Elena Koundourou</h3>
-            <p>
-                Elena Koundourou studied occupational therapy at the Technological Educational Institute of Athens and
-                completed her studies at the Karolinska Institute of Stockholm, where she also specialized in
-                neurological rehabilitation. From 2000 to 2004 she worked as an external collaborator in a
-                rehabilitation center, special therapies offices and home treatments, while at the same time she began
-                to specialize in pediatric occupational therapy and even more specifically in autism. From 2005 to 2008
-                she was in charge of the occupational therapy department at a large rehabilitation center. In 2005 she
-                created the occupational therapy center "Exelixis" which maintains to this day with main interest the
-                rehabilitation of neurological and developmental disorders in children. In 2014, the occupational
-                therapy center "Exelixis" co-located and permanently collaborated with the Speech and Language Therapy
-                Center, thus improving the benefits to its customers. This collaboration developed and matured, as a
-                result of which the two centers were united under a new name and the creation of the center for special
-                therapies "Simeio". In addition to the above, she is a supervisor of students and graduates of
-                occupational therapy, a member of the interdisciplinary team of many kindergartens in Thessaloniki and a
-                member of the Panhellenic Association of Occupational Therapists. She also collaborates with the
-                Metropolitan College of Thessaloniki, in various roles within the department of occupational therapy,
-                such as that of teacher of courses, head teacher of first year and responsible practiceIng. She is
-                specialized in Sensory Integration, Vision, PECS and TEEACH methods, Social Histories, Behavior
-                Management methods for people with disabilities, Motor Learning, PNF, Functional Tone Management, Animal
-                Assisted Therapy, Circus Therapy and many other methods. In 2020 she began her master's degree ( MSc) in
-                rehabilitation with a view to neurodevelopmental pediatric rehabilitation at Oxford Brooks University ,
-                England. From the beginning of her career until now she has not stopped educating herself so that the
-                times do not overtake her and she faces occupational therapy with unquenchable passion, love and
-                responsibility.
-            </p>
+        <div class="cv-inner">
+            <div class="cv">
+                <div class="cv-info">
+                    <div class="cv-info-inner">
+                        <h3>Elena Koundourou</h3>
+                        <h4>Occupational Therapist</h4>
+                        <h4>Email : kentrologo@gmail.com</h4>
+                    </div>
+                </div>
+                <div class="cv-description">
+                    <p> Elena Koundourou studied occupational therapy at the Technological Educational Institute
+                        ofAthens and completed her studies at the Karolinska Institute of Stockholm, where she also
+                        specialized in neurological rehabilitation. From 2000 to 2004 she worked as an external
+                        collaborator in a rehabilitation center, special therapies offices and home treatments, while at
+                        the same time she began to specialize in pediatric occupational therapy and even more
+                        specifically in autism. </p>
+                    <p> From 2005 to 2008 she was in charge of the occupational therapy department at a large
+                        rehabilitation center. In 2005 she created the occupational therapy center "Exelixis" which
+                        maintains to this day with main interest the rehabilitation of neurological and developmental
+                        disorders in children.</p>
+                    <p> Since 2014, the occupational therapy center "ekelixis" co-located and permanently cooperated
+                        with the Speech Therapy Center, thus improving the services provided to the clients of the two
+                        places. She is a supervisor of occupational therapy students and graduates and a member of the
+                        interdisciplinary team of several preschools in Thessaloniki.</p>
+                    <p> Since 2018, she is in charge of internship and professor at the Metropolitan College of
+                        Thessaloniki in the department of occupational therapy. She specializes in Sensory Integration,
+                        vision, PECS and TEEACH methods, Social Stories, Disability Behavior Management methods, Motor
+                        Learning, PNF, Functional Tone Management, Animal Assisted Therapy and many other methods.
+                    </p>
+                    <p> In 2020 she started her MSc in rehabilitation. From the beginning of her career until now, she
+                        has not stopped educating herself, so that the times do not overtake her and treats occupational
+                        therapy with the same unquenchable passion and love as in the beginning.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
