Add heading and p elements to katerina.html and style

--- a/katerina.html
+++ b/katerina.html
@@ -41,39 +41,56 @@
     </header>
 
     <section class="cv-outer">
-        <div class="cv">
-            <h3>Katerina Gkesou</h3>
-            <p>
-                Katerina Gkesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
-                Department of Physical Education and Sports Science (TEFAA) specializing in Special Physical Education.
-                She continued her specialization with two master's degrees. The first comes from the Postgraduate
-                Program "Kinesiology" of the Department of Physical Education and Sport Science of Serres where she
-                dealt with the effect of Electrical Stimulation on the fatigue of the muscles of the thenar while the
-                second from the Special Inclusive Education European University of Cyprus where she dealt with the
-                Evaluation of the understanding of the emotions of others through Psychomotor by children with Autism
-                Spectrum Disorder. At the level of training, she has completed the training of Sensory Integration while
-                her personal portfolio includes the Seminar on learning infant swimming, the seminar on Psychomotor-
-                Music-Kinetic Education of EKPA and the seminar of the Hellenic Society Halliwic. Swimming and Therapy
-                for People with Special needs. She has also attended the 216-hour Professional Yoga Learning Program
-                specializing in children's yoga. She is specialized in PECS and TEEACH methods, Social Histories,
-                Behavioral Management methods for people with disabilities, Motor Learning and Cognitive Orientation
-                Approach in the daily execution of a CO-OP (Cognitive Orientation to daily Occupational Performance)
-                project. From 2005 to 2018 she worked as an external collaborator in kindergartens and structures for
-                people with disabilities, organizing psychomotor and adapted physical activity programs for children
-                with difficulties in movement. Since 2007 she has been delivering personalized programs of Kinetic
-                Intervention, Occupational Therapy and Hydrotherapy at home in collaboration with private and public
-                swimming pools of the city and from 2012-2017 she provided educational parallel support to children with
-                Autism Spectrum Disorder (ASD) and Down syndrome, while at the same time she was an external partner in
-                a private Physiotherapy Center where she began to specialize in pediatric Occupational Therapy. From
-                2017-2022 she worked in large Rehabilitation Centers framing the Department of Adult Occupational
-                Therapy, while at the same time she was in charge of their respective Pediatric Department. Since 2021
-                she has been working as an occupational therapist at the Pediatric Therapy Center "Excelixi" of Elena
-                Koundourou while also collaborating with the Metropolitan College of Thessaloniki as a teacher. The
-                collaboration with Elena Koundourou developed and matured, resulting in the creation of the Center for
-                Special Therapies "Simeio". From the beginning of her career until now she has not stopped training,
-                while her unstoppable passion and love for Occupational Therapy remain the driving force to continue her
-                Lifelong Education.
-            </p>
+        <div class="cv-inner">
+            <div class="cv">
+                <div class="cv-info">
+                    <div class="cv-info-inner">
+                        <h3>Katerina Gkesou</h3>
+                        <h4>Neurodevelopmental Rehabilitation</h4>
+                        <h4>Email : kentrologo@gmail.com</h4>
+                    </div>
+                </div>
+                <div class="cv-description">
+
+                    <p>
+                        Katerina Gesou is a graduate of the BSc Occupational Therapy, Queen Margaret University and the
+                        Department of Physical Education and Sports Science (TEFAA) with a specialization in Special
+                        Physical Education. She continued her specialization with two master's degrees. The first comes
+                        from the Master's Program "Kinesiology" TEFAA Serres where he dealt with the effect of
+                        Electrical Stimulation on the fatigue of the thenar muscles while the second from the Special
+                        Inclusive Education European University of Cyprus where he dealt with the Evaluation of the
+                        understanding of the emotions of others through of Psychokinetic by children with Autism
+                        Spectrum Disorder.
+                    </p>
+                    <p>In terms of training, she has completed the Sensory Integration training, while her personal
+                        portfolio includes the Baby Swimming Learning Seminar, the Psychokinetic-Musicomotor Education
+                        E.K.P.A seminar and the Hellenic Society Halliwic seminar. Swimming and Therapy for People with
+                        Special Needs. She has also attended the 216-hour Professional Yoga Learning Departments
+                        Curriculum specializing in Children's Yoga.</p>
+                    <p>She is specialized in PECS and TEEACH methods, Social Histories, PWD Behavior Management methods,
+                        Kinetic Learning and the Cognitive Orientation Approach to the daily execution of the CO-OP
+                        Project (Cognitive Orientation to daily Occupational Performance).</p>
+                    <p>From 2005 to 2018, she worked as an external partner in kindergartens and PWD structures,
+                        organizing Psychomotor and Adapted Physical Activity programs for children with mobility
+                        difficulties. Since 2007, he has been delivering personalized programs of Kinetic Intervention,
+                        Occupational Therapy and Hydrotherapy at home in collaboration with private and public swimming
+                        pools of the city and from 2012-2017 he provided parallel educational support to children with
+                        Autism Spectrum Disorder (ASD) and Down syndrome, while at the same time he was external partner
+                        in a private Physiotherapy Center where he began to specialize in pediatric Occupational
+                        Therapy. From 2017-2022 she worked in large Rehabilitation Centers supporting the adult
+                        Occupational Therapy department, while she was simultaneously in charge of their corresponding
+                        Pediatric department. From 2021 she works as an occupational therapist at the "Evolution"
+                        Pediatric Treatment Center of Elena Koundourou while also collaborating with the Metropolitan
+                        College of Thessaloniki as a teacher.
+                    </p>
+                    <p>The collaboration with Elena Koundourou developed and matured, resulting in the creation of the
+                        Center for Special Treatments "simeio".</p>
+                    <p>From the beginning of her career until now she has not stopped educating herself, while her
+                        unstoppable passion and love for Occupational Therapy remains the driving force to continue her
+                        lifelong education.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -82,8 +99,8 @@
             <div class="social">
                 <ul>
                     <li>
-                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank" aria-label="Visit our Facebook page"><i
-                                class="fa-brands fa-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100087858451493" target="_blank"
+                            aria-label="Visit our Facebook page"><i class="fa-brands fa-facebook"></i></a>
                     </li>
                     <li>
                         <a href="https://twitter.com" target="_blank" aria-label="Visit our Twitter page"><i
@@ -118,7 +135,7 @@
                     target="_blank">Κέντρο Ειδικών Θεραπειών “σημείο”</a></p>
         </div>
     </footer>
-    
+
     <!--Font awesome script-->
     <script src="https://kit.fontawesome.com/cdf0a3356f.js" crossorigin="anonymous"></script>
 
