Fix issue with images for screens 800px and down

--- a/about-us.html
+++ b/about-us.html
@@ -44,8 +44,7 @@
 
     <section class="main-bg ">
         <div class="image-left">
-            <img src="assets/images/image-about.jpg" width="600" height="400"
-                alt="girl-in-red-dress-playing-a-wooden-blocks">
+            <img src="assets/images/image-about.jpg" alt="girl-in-red-dress-playing-a-wooden-blocks">
         </div>
         <div class="right-about">
             <h2>Welcome to the Center for Special Treatments "Simeio"</h2>
