Update image name.Fix issue with image to therapies pages

--- a/occupational-therapy.html
+++ b/occupational-therapy.html
@@ -113,8 +113,8 @@
                 <li>Maladaptive behavior</li>
             </ul>
         </div>
-        <div class="therapy-image">
-            <img src="assets/images/occup-image.jpg" alt="">
+        <div class="therapy-image occup-image">
+            <img src="assets/images/therapies-image.jpg" alt="">
         </div>
     </section>
 
